--- a/dfs/makefile
+++ b/dfs/makefile
@@ -2,7 +2,7 @@ libraries := graph
 headers := graph/include
 CPPFLAGS = -I $(headers)
 
-.PHONY: clean $(libraries)
+.PHONY: clean $(libraries) components.o
 
 dfsa: dfsa.o $(libraries)
 	gcc -o dfsa dfsa.o graph/graph.o graph/list.o $(CPPFLAGS)
@@ -15,6 +15,18 @@ dfsb: dfsb.o $(libraries)
 
 dfsb.o: dfsb.c $(libraries)
 	gcc -c dfsb.c $(CPPFLAGS)
+
+components: components.o $(libraries)
+	gcc -o components components.o graph/graph.o graph/list.o $(CPPFLAGS)
+
+components.o:
+	gcc -c components.c $(CPPFLAGS)
+
+edgeCat: edgeCat.o $(libraries)
+	gcc -o edgeCat edgeCat.o graph/graph.o graph/list.o $(CPPFLAGS)
+
+edgeCat.o:
+	gcc -c edgeCat.c $(CPPFLAGS)
 
 $(libraries):
 	$(MAKE) --directory=$@ 
